--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,7 @@ services:
       - .:/crypto_trading_game
     ports:
       - "3000:3000"
-    environment:
-      - DB_HOST=db
-      - DB_USER=postgres
-      - DB_PASSWORD=
-      - REDIS_URL=redis://redis:6379/0
+    env_file: .env
     depends_on:
       - db
       - redis
